--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-vue": "^7.0.0",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueup/vue-quill": "^1.2.0",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "ckeditor5": "^43.0.0",
     "element-plus": "^2.8.0",
+    "pinia": "^2.2.2",
+    "pinia-plugin-persist": "^1.0.0",
+    "uuid": "^10.0.0",
     "vue": "^3.4.37",
+    "vue-icons-plus": "^0.0.9",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
