--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@ckeditor/ckeditor5-vue": "^7.0.0",
-    "@element-plus/icons-vue": "^2.3.1",
     "@vueup/vue-quill": "^1.2.0",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "ant-design-vue": "^4.2.3",
     "ckeditor5": "^43.0.0",
-    "element-plus": "^2.8.0",
     "pinia": "^2.2.2",
     "pinia-plugin-persist": "^1.0.0",
     "uuid": "^10.0.0",
