--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^4.2.3",
     "ckeditor5": "^43.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "pinia": "^2.2.2",
     "pinia-plugin-persist": "^1.0.0",
     "uuid": "^10.0.0",
