Fix(core): 修复bug 1.修复已知bug-自动构建

--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # 确保有写权限
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
