--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ckeditor5": "^43.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "pinia": "^2.2.2",
     "pinia-plugin-persist": "^1.0.0",
     "uuid": "^10.0.0",
