feature(core): 完善一部分功能 1.添加AI生成关于我的页面中的部分内容 2.html转成pdf工具抽取为公共函数

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.7",
     "ckeditor5": "^43.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
